@@ -83,7 +83,8 @@
                    Zoltan Bartko, Didier Briel, Kim Bruning, Alex Buloichik, Sandra Jean
                    Chua, Martin Fleurke, Thomas Huriaux, Fabián Mandelbaum, John Moran,
                    Arno Peters, Henry Pijffers, Briac Pilpré, Tiago Saboga, Andrzej Sawuła, 
-                   Benjamin Siband, Rashid Umarov, Antonio Vilei and Martin Wunderlich.
+                   Benjamin Siband, Rashid Umarov, Antonio Vilei, Martin Wunderlich and 
+                   Michael Zakharov.
             </p>
             <p><span class="bold"><strong>Distribution and
                          modifications</strong></span></p>
