@@ -862,6 +862,9 @@ INIFILTER_FILTER_NAME=\u0422\u0435\u043a\u0441\u0442\u043e\u0432\u044b\u0435 \u0
 
 DWFILTER_FILTER_NAME=\u0424\u0430\u0439\u043b\u044b DokuWiki
 
+# MagentoFilter.java
+MAGENTOFILTER_FILTER_NAME=\u0424\u0430\u0439\u043b\u044b\u043b\u043e\u043a\u0430\u043b\u0438\u0437\u0430\u0446\u0438\u0438 CSV Magento CE
+
 # org.omegat.filters3.xml.opendoc.OpenDocFilter
 
 OpenDoc_FILTER_NAME=\u0424\u0430\u0439\u043b\u044b OpenDocument/OpenOffice.org
